--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,41 +5,41 @@ body{
   padding: 0;
   margin: 0;
 }
-
+/*
 header{
-  padding-top:10px;
-  padding-bottom:25px;
+  padding-top:15px;
+  padding-bottom:30px;
   padding-left:0;
   padding-right:0;
-  background:#f3f3f3;
-  border-bottom:20px solid #3af29d;
+  background:#f2f2f2;
+  border-bottom:15px solid #3af29d;
 }
 
 nav{
   width:960px;
   margin:0 auto;
 }
-
-nav ul{
+*/
+.menu{
   list-style:none;
-  text-align:right;
-  margin-top:-40px;
-  text-transform: uppercase;
-}
+  border:1px solid #c0c0c0;
+  float:left;
+  }
 
-nav ul li{
-  display: inline;
-  padding: 2px 20px;
-}
+.menu li{
+    position:relative;
+    float:left;
+    border-right:1px solid #c0c0c0;
+  }
 
-nav a{
-  color:#530f2e;
-  font-family:Trebuchet MS;
-  text-decoration:none;
-}
+.menu li a{color:#333; text-decoration:none; padding:5px 10px; display:block;}
 
-li a:hover{
-  color: red;
+.menu li a:hover{
+background:#333;
+color:#fff;
+-moz-box-shadow:0 3px 10px 0 #CCC;
+-webkit-box-shadow:0 3px 10px 0 #ccc;
+text-shadow:0px 0px 5px #fff;
 }
 
 iframe{
