--- a/css/estilo.css
+++ b/css/estilo.css
@@ -42,6 +42,14 @@ color:#fff;
 text-shadow:0px 0px 5px #fff;
 }
 
+.menu li  ul{
+  position:absolute;
+  top:25px;
+  left:0;
+  background-color:#fff;
+  display:none;
+  }
+
 iframe{
   transition: height 1s;
 }
